developing javascript to check the server

--- a/application-monitor-client/src/main/webapp/index.html
+++ b/application-monitor-client/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Monitor</title>
-
+ 
 <!-- CSS -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="node_modules/material-design-lite/dist/material.indigo-pink.min.css">
@@ -62,6 +62,8 @@
 			    sdsdsd
 			  </div>
 			</div>
+		
+			{{servers}}
 		
 		</main>
 	</div>
