--- a/application-monitor-client/src/main/webapp/index.html
+++ b/application-monitor-client/src/main/webapp/index.html
@@ -39,7 +39,7 @@
 		
 		<header class="custom-header mdl-layout__header mdl-layout__header--waterfall">
 	        <div class="mdl-layout__header-row">
-	            <span class="mdl-layout-title" style="text-shadow: 1px 1px 1px #000;"">Web Applications Monitor</span>
+	            <span class="mdl-layout-title" style="text-shadow: 1px 1px 1px #000;"">Web Applications Monitor - {{remainingTime}}</span>
 	        </div>
 	    </header>
 		
