--- a/application-monitor-client/src/main/webapp/index.html
+++ b/application-monitor-client/src/main/webapp/index.html
@@ -25,6 +25,15 @@
 	.material-icons {
 		vertical-align: middle !important;
 	}
+	.mdl-cell {
+		padding: 1vh; 
+		color: white; 
+		text-shadow: 1px 1px 1px #000; 
+		box-shadow: 3px 3px 3px #555555;
+		border-style: solid;
+		border-width : 1px;
+    	border-color: #888888;
+	}
 </style>
 
 
@@ -48,7 +57,7 @@
 		
 		<main class="mdl-layout__content">
 			<div class="content-grid mdl-grid">
-				<div class="mdl-cell" ng-repeat="server in servers.values" style="padding: 1vh; color: white; text-shadow: 1px 1px 1px #000;" status="{{server.status}}">
+				<div class="mdl-cell" ng-repeat="server in servers.values" status="{{server.status}}">
 				    
 				    <i class="material-icons" style="position: absolute" ng-show="server.status == 1">done</i>
 				    <i class="material-icons" style="position: absolute" ng-show="server.status == 2">warning</i>
